# lambda-otel-relay

./: Cargo.toml  README.md  build.rs  justfile
.github/: release.yml
.github/workflows/: ci.yml  release.yml
crates/extension/: Cargo.toml  build.rs
crates/extension/src/: buffers.rs  config.rs  event_loop.rs  exporter.rs  extensions_api.rs  grpc.rs  http_client.rs  main.rs  merge.rs  otlp_listener.rs  proto.rs  runtime_mode.rs  testing.rs
crates/extension/src/buffers/: mod.rs  tests.rs
crates/extension/src/config/: mod.rs  tests.rs
crates/extension/src/event_loop/: http_tests.rs  mod.rs  tests.rs
crates/extension/src/exporter/: grpc.rs  http_protobuf.rs  mod.rs
crates/extension/src/extensions_api/: http_tests.rs  mod.rs  tests.rs
crates/extension/src/flush_strategy/: mod.rs  tests.rs
crates/extension/src/flush_strategy/tests/: continuously.rs  default.rs  end.rs  end_periodically.rs  mod.rs  parsing.rs  periodically.rs
crates/extension/src/merge/: mod.rs  tests.rs
crates/extension/src/otlp_listener/: mod.rs  tests.rs
crates/extension/src/telemetry_listener/: events.rs  events_tests.rs  mod.rs  tests.rs
crates/telemetry-proxy/: Cargo.toml
crates/telemetry-proxy/src/: main.rs
crates/test-handler/: Cargo.toml
crates/test-handler/src/: collector.rs  lib.rs  main.rs
proto/: .files
src/: buffers.rs  config.rs  extensions_api.rs  main.rs  otlp_listener.rs
src/extension/: buffers.rs  exporter.rs  extensions_api.rs  otlp_listener.rs
src/extension/telemetry_listener/: mod.rs
src/telemetry_listener/: events.rs  mod.rs
src/telemetry_proxy/: README.md
tests/: binary.rs  error_reporting.rs  export.rs  integration.rs  lifecycle.rs  log_matching.rs  otlp.rs  support_utils.rs
tests/fixtures/: bootstrap
tests/fixtures/mock-rie/: Dockerfile  entrypoint.sh  ext-wrapper.sh
tests/support/: container_ext.rs  harness.rs  lambda.rs  mod.rs  proto.rs
