[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"

# The root package exists solely for integration tests.
# It has no src — only tests/ and dev-dependencies.
[package]
name = "integration-tests"
version = "0.0.0"
edition.workspace = true
publish = false

[dev-dependencies]
testcontainers = "0.27"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["std", "ring", "tls12"] }
serde_json = "1"
test-handler = { path = "crates/test-handler" }
prost = "0.14"
flate2 = "1"
base64 = "0.22"

[build-dependencies]
prost-build = "0.14"
protox = "0.9"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
hyper-rustls = { version = "0.27.7", default-features = false, features = ["ring", "http1", "http2", "tls12"] }
hyper-util = { version = "0.1.20", features = ["tokio", "server-auto", "client-legacy", "http1", "http2"] }
