[package]
name = "lambda-otel-relay"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "lambda-otel-relay"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time", "macros", "io-util"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls-no-provider", "http2", "gzip"] }
rustls = { version = "0.23", default-features = false, features = ["std", "ring", "tls12"] }
nanoserde = { version = "0.2", features = ["std", "json"] }
thiserror = "2.0.18"
tokio-util = { version = "0.7", features = ["rt"] }
bytes = "1"
hyper = { version = "1", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
http-body-util = "0.1"
url = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-microjson = "0.3"
prost = "0.14"
flate2 = "1"

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }

[build-dependencies]
prost-build = "0.14"
protox = "0.9"
