[package]
name = "test-handler"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "test-handler"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["std", "ring", "tls12"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
