[package]
name = "test-handler"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "test-handler"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls-no-provider", "json"] }
rustls = { version = "0.23", default-features = false, features = ["std", "ring", "tls12"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
bytes = "1"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
http-body-util = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-microjson = "0.3"
